@@ -1,0 +1,34 @@
+// Copyright (C) 2018 Free Software Foundation, Inc.
+//
+// This file is part of the GNU ISO C++ Library.  This library is free
+// software; you can redistribute it and/or modify it under the
+// terms of the GNU General Public License as published by the
+// Free Software Foundation; either version 3, or (at your option)
+// any later version.
+
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License along
+// with this library; see the file COPYING3.  If not see
+// <http://www.gnu.org/licenses/>.
+
+// { dg-options "-O0 -lstdc++fs -std=gnu++11" }
+// { dg-do link { target c++11 } }
+
+#include <experimental/filesystem>
+
+std::experimental::filesystem::path::value_type
+test01()
+{
+  auto* sep = &std::experimental::filesystem::path::preferred_separator;
+  return *sep;
+}
+
+int
+main()
+{
+  test01();
+}
